WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241036
[iOS][GPUP] Apply workaround for invalid Mobile Gestalt cache
https://bugs.webkit.org/show_bug.cgi?id=241036
Summary
[iOS][GPUP] Apply workaround for invalid Mobile Gestalt cache
Per Arne Vollan
Reported
2022-05-27 12:42:45 PDT
In the WebContent process on iOS, we have a workaround to repopulate the Mobile Gestalt cache in case the disk version is invalid. This workaround should be applied to the GPU process as well.
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2022-05-27 12:45:10 PDT
<
rdar://problem/93614152
>
Per Arne Vollan
Comment 2
2022-05-27 13:04:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1115
EWS
Comment 3
2022-06-01 08:05:34 PDT
Committed
r295087
(
251182@main
): <
https://commits.webkit.org/251182@main
> Reviewed commits have been landed. Closing PR #1115 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug