Cherry-pick 864e6c34444f. rdar://problem/93614152

[iOS][GPUP] Apply workaround for invalid Mobile Gestalt cache
    https://bugs.webkit.org/show_bug.cgi?id=241036
    <rdar://93614152>

    Reviewed by Geoffrey Garen.

    In the WebContent process on iOS, we have a workaround to repopulate the Mobile Gestalt cache in case
    the disk version is invalid. This workaround should be applied to the GPU process as well.

    * Source/WebKit/GPUProcess/GPUProcessCreationParameters.cpp:
    (WebKit::GPUProcessCreationParameters::encode const):
    (WebKit::GPUProcessCreationParameters::decode):
    * Source/WebKit/GPUProcess/GPUProcessCreationParameters.h:
    * Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.GPU.sb.in:
    * Source/WebKit/Shared/AuxiliaryProcess.h:
    * Source/WebKit/Shared/AuxiliaryProcess.cpp:
    (WebKit::AuxiliaryProcess::populateMobileGestaltCache):
    * Source/WebKit/Shared/ios/AuxiliaryProcessIOS.cpp:
    (WebKit::AuxiliaryProcess::populateMobileGestaltCache):
    * Source/WebKit/UIProcess/AuxiliaryProcessProxy.cpp:
    (WebKit::AuxiliaryProcessProxy::createMobileGestaltSandboxExtensionIfNeeded const):
    * Source/WebKit/UIProcess/AuxiliaryProcessProxy.h:
    * Source/WebKit/UIProcess/Cocoa/GPUProcessProxyCocoa.mm:
    (WebKit::GPUProcessProxy::platformInitializeGPUProcessParameters):
    * Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
    (WebKit::WebProcessPool::platformInitializeWebProcess):
    * Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
    (WebKit::WebProcess::platformInitializeWebProcess):

    Canonical link: https://commits.webkit.org/251182@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295087 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.763@safari-7613.3.9.0-branch